// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Pre /> should render code block when no languages are passed 1`] = `
<div
  class="my-8"
>
  <pre
    class="ui-theme-dark bg-cool-black text-white p-0 rounded-lg relative max-w-[calc(100vw-48px)] sm:max-w-full"
  >
    useVars = false;
  </pre>
</div>
`;

exports[`<Pre /> should successfully render Code elements with language 1`] = `
<div
  class="my-8"
>
  <pre
    class="ui-theme-dark bg-cool-black text-white p-0 rounded-lg relative max-w-[calc(100vw-48px)] sm:max-w-full"
  >
    <div
      class="border-b border-charcoal-grey w-full"
    >
      <menu
        class="horizontalNav docs-language-navigation"
        data-languages="javascript,csharp"
        data-testid="menu"
      >
        <button
          class="button ui-text-label3 isActive"
        >
          JavaScript
        </button>
        <button
          class="button ui-text-label3"
        >
          C# .NET
        </button>
        <div
          class="dropdownContainer"
        >
          <div
            class=" css-fyq6mk-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-language-navigation-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
              role="log"
            />
            <div
              class="ably-select__control css-178amwe-control"
            >
              <div
                class="ably-select__value-container ably-select__value-container--has-value css-1fdsijx-ValueContainer"
              >
                <div
                  class="ably-select__single-value css-9aszhm-singleValue"
                >
                  JavaScript v2.16
                </div>
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="react-select-language-navigation-input"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="ably-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="ably-select__indicator-separator css-1xjgjl1-IndicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="ably-select__indicator ably-select__dropdown-indicator css-1gvtn5f-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
    useVars = false;
  </pre>
</div>
`;

exports[`<Pre /> should successfully render code elements with  only Realtime languages 1`] = `
<div
  class="my-8"
>
  <pre
    class="ui-theme-dark bg-cool-black text-white p-0 rounded-lg relative max-w-[calc(100vw-48px)] sm:max-w-full"
  >
    <div
      class="bg-dark-grey border-charcoal-grey text-white border-b-4 rounded-t-lg flex justify-end"
    >
      <menu
        class="flex md:overflow-x-auto pl-0 justify-end md:justify-start h-12 mr-4 my-0"
        data-testid="menuSDKInterface"
      >
        <button
          class="font-medium font-sans focus:outline-none px-6 text-mid-grey bg-charcoal-grey"
        >
          Realtime
        </button>
        <div
          aria-label="Ably SDKs may contain a realtime and a REST interface, each of which satisfy different use cases."
          class="flex flex-row w-full justify-start mt-0.5"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="text-neutral-500 mt-3 ml-4"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            style="width: 1.25rem; height: 1.25rem;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </menu>
    </div>
    <div
      class="border-b border-charcoal-grey w-full"
    >
      <menu
        class="horizontalNav docs-language-navigation"
        data-languages="javascript,csharp"
        data-testid="menu"
      >
        <button
          class="button ui-text-label3 isActive"
        >
          JavaScript
        </button>
        <button
          class="button ui-text-label3"
        >
          C# .NET
        </button>
        <div
          class="dropdownContainer"
        >
          <div
            class=" css-fyq6mk-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-language-navigation-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
              role="log"
            />
            <div
              class="ably-select__control css-178amwe-control"
            >
              <div
                class="ably-select__value-container ably-select__value-container--has-value css-1fdsijx-ValueContainer"
              >
                <div
                  class="ably-select__single-value css-9aszhm-singleValue"
                >
                  realtime_javascript
                </div>
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="react-select-language-navigation-input"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="ably-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="ably-select__indicator-separator css-1xjgjl1-IndicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="ably-select__indicator ably-select__dropdown-indicator css-1gvtn5f-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
    useVars = false;
  </pre>
</div>
`;

exports[`<Pre /> should successfully render code elements with  only Rest languages 1`] = `
<div
  class="my-8 p-4 bg-light-grey rounded-lg"
>
  <aside
    class="mb-4 flex justify-between items-start"
  >
    <div
      class="mt-0.5"
    >
      <svg
        aria-hidden="true"
        class=""
        data-slot="icon"
        fill="currentColor"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0ZM9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0ZM6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8h-1.5Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="ml-2 leading-tight"
    >
      You're currently viewing the 
      <span
        class="font-semibold"
      >
        JavaScript
      </span>
       
      docs. There either isn't a 
      JavaScript
       code sample for this example, or this feature isn't supported in 
      JavaScript
      . Switch language to view this example in a different language, or
       
      <a
        class="ui-link"
        href="/docs/sdks"
      >
        check which SDKs support this feature.
      </a>
    </div>
  </aside>
  <pre
    class="ui-theme-dark bg-cool-black text-white p-0 rounded-lg relative max-w-[calc(100vw-48px)] sm:max-w-full"
  >
    <div
      class="bg-dark-grey border-charcoal-grey text-white border-b-4 rounded-t-lg flex justify-end"
    >
      <menu
        class="flex md:overflow-x-auto pl-0 justify-end md:justify-start h-12 mr-4 my-0"
        data-testid="menuSDKInterface"
      >
        <button
          class="font-medium font-sans focus:outline-none px-6 text-mid-grey bg-charcoal-grey"
        >
          Realtime
        </button>
        <div
          aria-label="Ably SDKs may contain a realtime and a REST interface, each of which satisfy different use cases."
          class="flex flex-row w-full justify-start mt-0.5"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="text-neutral-500 mt-3 ml-4"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            style="width: 1.25rem; height: 1.25rem;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </menu>
    </div>
    useVars = false;
  </pre>
</div>
`;

exports[`<Pre /> should successfully render code elements with both Rest and Realtime languages 1`] = `
<div
  class="my-8"
>
  <pre
    class="ui-theme-dark bg-cool-black text-white p-0 rounded-lg relative max-w-[calc(100vw-48px)] sm:max-w-full"
  >
    <div
      class="bg-dark-grey border-charcoal-grey text-white border-b-4 rounded-t-lg flex justify-end"
    >
      <menu
        class="flex md:overflow-x-auto pl-0 justify-end md:justify-start h-12 mr-4 my-0"
        data-testid="menuSDKInterface"
      >
        <button
          class="font-medium font-sans focus:outline-none px-6 text-mid-grey bg-charcoal-grey"
        >
          Realtime
        </button>
        <button
          class="font-medium font-sans focus:outline-none px-6 text-mid-grey "
        >
          REST
        </button>
        <div
          aria-label="Ably SDKs may contain a realtime and a REST interface, each of which satisfy different use cases."
          class="flex flex-row w-full justify-start mt-0.5"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="text-neutral-500 mt-3 ml-4"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            style="width: 1.25rem; height: 1.25rem;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </menu>
    </div>
    <div
      class="border-b border-charcoal-grey w-full"
    >
      <menu
        class="horizontalNav docs-language-navigation"
        data-languages="javascript,csharp"
        data-testid="menu"
      >
        <button
          class="button ui-text-label3 isActive"
        >
          JavaScript
        </button>
        <button
          class="button ui-text-label3"
        >
          C# .NET
        </button>
        <div
          class="dropdownContainer"
        >
          <div
            class=" css-fyq6mk-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-language-navigation-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
              role="log"
            />
            <div
              class="ably-select__control css-178amwe-control"
            >
              <div
                class="ably-select__value-container ably-select__value-container--has-value css-1fdsijx-ValueContainer"
              >
                <div
                  class="ably-select__single-value css-9aszhm-singleValue"
                >
                  realtime_javascript
                </div>
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="react-select-language-navigation-input"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="ably-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="ably-select__indicator-separator css-1xjgjl1-IndicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="ably-select__indicator ably-select__dropdown-indicator css-1gvtn5f-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
    useVars = false;
  </pre>
</div>
`;
